--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "react": "^18",
