--- a/.env
+++ b/.env
@@ -23,6 +23,8 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+NEXTAUTH_SECRET="Kiw6Jbj5i9P5pSX7aQ8NzJO9qJHveBH17Kh07G590u8="
+NEXTAUTH_URL="http://localhost:3001"
 
 #AUTH
 AUTH_GITHUB_ID=""
