--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.7.0",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.16",
+    "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
