--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.0",
+    "@vercel/blob": "^0.16.1",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.298.0",
