--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ POSTGRES_PRISMA_URL="postgres://default:S8b3UOMYzxyI@ep-shrill-lake-05733249-poo
 POSTGRES_URL="postgres://default:S8b3UOMYzxyI@ep-shrill-lake-05733249-pooler.us-east-1.postgres.vercel-storage.com/verceldb"
 POSTGRES_URL_NON_POOLING="postgres://default:S8b3UOMYzxyI@ep-shrill-lake-05733249.us-east-1.postgres.vercel-storage.com/verceldb"
 POSTGRES_USER="default"
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_OuSfgAJMTAAM7M3J_jzjVcNoV1b55tnNqyBsZ9NmaCe6D6Q"
 TURBO_REMOTE_ONLY=""
 TURBO_RUN_SUMMARY=""
 VERCEL="1"
