--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
