--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.0",
     "@vercel/blob": "^0.16.1",
+    "bcrypt": "^5.1.1",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.298.0",
@@ -30,6 +31,7 @@
     "sonner": "^1.2.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
