add google login

--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ NEXTAUTH_URL="http://localhost:3001"
 #AUTH
 AUTH_GITHUB_ID=""
 AUTH_GITHUB_SECRET=""
+
+GOOGLE_CLIENT_ID="263566984774-84nkseb28b9mvpdkhd73gn5v343cm06q.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
+
+
