--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/blob": "^0.16.1",
     "bcrypt": "^5.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
