--- a/.env
+++ b/.env
@@ -33,3 +33,10 @@ AUTH_GITHUB_SECRET=""
 
 GOOGLE_CLIENT_ID="263566984774-84nkseb28b9mvpdkhd73gn5v343cm06q.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+
+#NextAuth Email
+EMAIL_SERVER_USER="ekeokigordon@icloud.com"
+EMAIL_SERVER_PASSWORD="vapu-jmyk-zsuz-qcme"
+EMAIL_SERVER_HOST="smtp.mail.me.com"
+EMAIL_SERVER_PORT="587"
+EMAIL_FROM="ekeokigordon@icloud.com"
