--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.0",
