--- a/.env
+++ b/.env
@@ -39,4 +39,4 @@ EMAIL_SERVER_USER="ekeokigordon@icloud.com"
 EMAIL_SERVER_PASSWORD="vapu-jmyk-zsuz-qcme"
 EMAIL_SERVER_HOST="smtp.mail.me.com"
 EMAIL_SERVER_PORT="587"
-EMAIL_FROM="ekeokigordon@icloud.com"
+EMAIL_FROM="prospectorminerals@prospectorminerals.com"
