--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prisma": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-file-resizer": "^0.4.8",
     "sonner": "^1.2.4"
   },
   "devDependencies": {
