add next bundle analyzer

--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
 NEXTAUTH_SECRET="Kiw6Jbj5i9P5pSX7aQ8NzJO9qJHveBH17Kh07G590u8="
 NEXTAUTH_URL="http://localhost:3001"
+ANALYZE=false
 
 #AUTH
 AUTH_GITHUB_ID=""
