--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.0",
     "@vercel/analytics": "^1.1.1",
