--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-image-file-resizer": "^0.4.8",
-    "sonner": "^1.2.4"
+    "react-intersection-observer": "^9.5.3",
+    "sonner": "^1.2.4",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
