--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.298.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
