--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "eslint-config-prettier": "^9.1.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
+    "install": "^0.13.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
+    "npm": "^10.4.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.0",
@@ -34,11 +38,13 @@
     "react-dom": "^18",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
     "sonner": "^1.2.4",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
