--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
     "install": "^0.13.0",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
     "sonner": "^1.2.4",
     "use-debounce": "^10.0.0"
   },
