--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
     "sonner": "^1.2.4",
     "use-debounce": "^10.0.0"
   },
