--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
