--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
+    "novel": "^0.1.22",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.0",
