--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/bundle-analyzer": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.1.1",
     "@vercel/blob": "^0.16.1",
     "bcrypt": "^5.1.1",
