--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-leaflet": "^4.2.1",
     "sonner": "^1.2.4",
-    "use-debounce": "^10.0.0",
-    "vaul": "^0.9.0"
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
