--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
     "sonner": "^1.5.0",
-    "use-debounce": "^10.0.1",
-    "vaul": "^0.9.1"
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
