--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@auth/prisma-adapter": "^2.4.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@nextui-org/react": "^2.4.2",
     "@prisma/client": "^5.15.1",
@@ -26,7 +26,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
     "next": "^14.2.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.14",
