--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "framer-motion": "^10.18.0",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.298.0",
-    "next": "^14.2.5",
+    "next": "^14.2.8",
     "next-auth": "^5.0.0-beta.19",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
@@ -37,6 +37,7 @@
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.12",
@@ -46,12 +47,11 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.8",
     "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "@next/bundle-analyzer": "^14.2.5",
-    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
