--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.18",
-    "@nextui-org/react": "^2.6.8",
+    "@heroui/react": "2.6.13",
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.14",
     "@types/node": "^20.17.6",
