--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@heroui/react": "^2.7.5",
     "@prisma/client": "^6.5.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.3",
     "bcrypt": "^5.1.1",
