--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev -p 3000",
-    "build": "prisma generate && prisma db push && next build",
+    "dev": "prisma generate && next dev --webpack -p 3000",
+    "build": "prisma generate && prisma db push && next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "postinstall": "prisma generate"
@@ -22,11 +22,11 @@
     "focus-trap-react": "^11.0.3",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.501.0",
-    "next": "^15.4.6",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "^16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.7",
     "novel": "^0.1.22",
     "prisma": "^6.6.0",
     "react": "^19.1.1",
@@ -36,7 +36,7 @@
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^15.4.6",
+    "@next/bundle-analyzer": "^16.0.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.17",
@@ -46,7 +46,7 @@
     "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
-    "eslint-config-next": "^15.3.1",
+    "eslint-config-next": "^16.0.3",
     "eslint-config-prettier": "^10.1.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
